css/desktop.css
/* ... */
#features .grid .row:first-child .cell, #features .grid .row:last-child .cell{
    color: #FFF;
}
#features .grid .row:first-child .cell i, #features .grid .row:last-child .cell i{
    text-shadow: 1px 1px 5px #555;
}
.grid .row div:first-child i{
    font-size: 35px;
    display: inline-block;
    margin-top: 0;
    text-shadow: 0 1px 3px #FDFDFD;
}
.grid .row:first-child .cell, .grid .row:last-child .cell{
    background-color: rgb(192,192,192);
    padding: 2px;
}
.grid .row:last-child a{
    color: #DADADA;
}
#features .grid .row .cell a:hover i, #apidocs .grid .row .cell a:hover i{
    text-shadow: 0 0 16px #B12906;
}
.grid .row:first-child .cell i, .grid .row:last-child .cell i{
    font-size: 30px;
    margin-bottom: 1px;
    display: inline-block;
    line-height: 2em;
}

.grid .row .cell i.aug{
    font-size: 46px;
    margin-top: -26px;
}
.grid .row.odd .cell{
    background-color: rgb(234,234,234);
    padding-top: 20px;
}
.grid .row.even .cell{
    background-color: rgb(245,245,245);
    padding-top: 20px;
}
.grid .yes{
    border: 3px solid rgb(152,152,152);
    border-radius: 12px;
    width: 25px; height: 25px;
    margin: 0 auto;
    background: rgb(244,201,149); /* Old browsers */
    background: -moz-linear-gradient(top,  rgba(244,201,149,1) 0%, rgba(255,107,73,1) 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(244,201,149,1)), color-stop(100%,rgba(255,107,73,1))); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  rgba(244,201,149,1) 0%,rgba(255,107,73,1) 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  rgba(244,201,149,1) 0%,rgba(255,107,73,1) 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  rgba(244,201,149,1) 0%,rgba(255,107,73,1) 100%); /* IE10+ */
    background: linear-gradient(to bottom,  rgba(244,201,149,1) 0%,rgba(255,107,73,1) 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f4c995', endColorstr='#ff6b49',GradientType=0 ); /* IE6-9 */
}
.grid .no{
    border: 3px solid rgb(152,152,152);
    border-radius: 12px;
    width: 25px; height: 25px;
    margin: 0 auto;
    background-color: rgb(214,214,214);
    -moz-box-shadow:      1px 1px 3px 2px #BEBEBE;
    -webkit-box-shadow:   1px 1px 3px 2px #BEBEBE;
    box-shadow:           1px 1px 3px 2px #BEBEBE;
}
.grid .row .cell i.contact-at{
    font-style: normal;
    position: absolute;
    margin-left: 6px;
    font-size: 16px;
    margin-top: 34px;
    padding: 0;
    line-height: 0;
}
#carousel i.contact-at{
    font-style: normal;
    position: absolute;
    margin-left: 23px;
    font-size: 35px;
    margin-top: 58px;
    padding: 0;
    line-height: 0;
}
#carousel .augmented-reality-icon{
    display: inline-block;
    vertical-align: bottom;
    margin-bottom: -10px;
}
.grid .row .cell i.icon-picture{
    font-style: normal;
    position: absolute;
    margin-left: 2px;
    font-size: 14px;
    margin-top: 7px;
    padding: 0;
}
#carousel i.icon-picture{
    font-style: normal;
    position: absolute;
    margin-left: 7px;
    font-size: 23px;
    margin-top: 33px;
    padding: 0;
}
@media screen and (max-width: 768px) {
    .grid{
        margin: 0;
        width: 100%;
    }
    .grid .row .cell{
        height: 50px;
    }
    .grid .row div:first-child .cell {
        padding-top: 2px;
    }
    #apidocs .grid .row div:nth-child(2) .cell {
        padding-top: 0;
        line-height: 50px;
    }
    .grid .row div:first-child .cell > div:first-child{
        font-size: 10px;
        margin-bottom: 8px;
    }
    .grid .row:first-child > div > .cell > div:first-child{
        /*display: none;*/
    }
    .grid .row:first-child .cell i, .grid .row:last-child .cell i {
        font-size: 20px;
    }
    .grid .row .cell i.contact-at{
        font-size: 8px;
        margin-top: 11px;
    }
    .grid .row .cell i.aug{
        font-size: 33px;
        margin-top: -12px;
    }
    .grid .row .cell i.icon-picture{
        margin-left: 2px;
        font-size: 8px;
        margin-top: 0;
    }
    .grid .row div:first-child i {
        font-size: 20px;
        margin-top: 0;
    }
    .grid .yes, .grid .no {
        width: 15px;
        height: 15px;
        margin: 0 auto;
    }
    .grid .api {
        padding-top: 17px;
    }
    .grid .row > div:first-child i {
        margin-top: -10px;
    }
    .grid .row a{
        color: #888;
    }
    #apidocs .grid .cell i, #apidocs .grid .cell div{
        color: #888;
    }
}
.section{ 
    margin-top: -90px;
    padding-top: 90px;
    padding-bottom: 20px;
}
pre {
    line-height: normal;
    background-color: inherit;
    border: none;
}
.demo-qr{
    padding: 25px 40px;
    border-radius: 25px;
    width: 210px;
    box-shadow: 0px 19px 37px 5px #A3A3A3
}
.demo-qr-sheen{
    position: relative;
}
.demo-qr-sheen div{
    opacity: 0.35;
    height: 90px;
    background-color: #FFF;
    width: 100%;
    position: absolute;
    border-bottom-left-radius: 165px 13px;
    border-bottom-right-radius: 165px 13px;
}
@media screen and (max-width: 768px) {
    .demo-qr{
        padding: 10px 15px;
        border-radius: 5px;
        width: 100%;
    }
    .items .more {
        margin-top: 0;
    }
}
#downloads p{
    margin: 0 0 20px;
}
#contactus .name, #contactus .email{
    margin: 10px 0 10px 0;
}
#contactus .name .col-sm-4, #contactus .name .col-sm-6,
#contactus .email .col-sm-4, #contactus .email .col-sm-6{
    padding: 0;
}
#contactus .commentfieldset .col-sm-10{
    padding-left: 20px;
}
#contactus label, #contactus input, #contactus textarea{
    color: #777;
    font-weight: 300;
}
#contactus input, #contactus textarea{
    border: 1px solid #777;
    width: 100%;
}
#contactus .submit{
    border-radius: 6px;
    background-color: #6D6A6A;
    font-size: 20px;
    width: 150px;
    color: #FFF;
    margin-top: 23px;
    -webkit-appearance: none;
    font-weight: 300;
    border: none;
}
/* ... */

